<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label_nombre_detalle"
                style="@style/titulo_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/mock_nombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label_posicion"
                style="@style/subtitulo1_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mock_cargo"
                app:layout_constraintEnd_toEndOf="@+id/label_nombre_detalle"
                app:layout_constraintStart_toStartOf="@+id/label_nombre_detalle"
                app:layout_constraintTop_toBottomOf="@+id/label_nombre_detalle" />

            <TextView
                android:id="@+id/label_salario"
                style="@style/subtitulo2_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mock_salario"
                app:layout_constraintEnd_toEndOf="@+id/label_posicion"
                app:layout_constraintStart_toStartOf="@+id/label_posicion"
                app:layout_constraintTop_toBottomOf="@+id/label_posicion" />

            <TextView
                android:id="@+id/label_es_nuevo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/es_nuevo"
                app:layout_constraintEnd_toEndOf="@+id/label_salario"
                app:layout_constraintStart_toStartOf="@+id/label_salario"
                app:layout_constraintTop_toBottomOf="@+id/label_salario" />

            <com.mitiempo.pruebamuy.Utilidades.VistasPersonalizadas.ListaEmpleados.VistaListaEmpleados
                android:id="@+id/lista_empleados_detalle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/label_es_nuevo"
                app:layout_constraintStart_toStartOf="@+id/label_es_nuevo"
                app:layout_constraintTop_toBottomOf="@+id/label_es_nuevo" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
